# line-process-pointset-denoising

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
data/cad/small_noise/: accessory_noise_0.01.xyz  accessory_noise_0.02.xyz  anchor_noise_0.01.xyz  anchor_noise_0.02.xyz  anchor_noise_0.03.xyz  cad2_noise_0.01.xyz  cad2_noise_0.02.xyz  fandisk_noise_0.01.xyz  fandisk_noise_0.02.xyz  joint_noise_0.01.xyz  joint_noise_0.02.xyz  part_noise_0.01.xyz  part_noise_0.02.xyz
data/cad/stress_test/: accessory_noise_0.03.xyz  anchor_noise_0.08.xyz  cad2_noise_0.03.xyz  cad2_noise_0.03_with_normal.xyz  fandisk_noise_0.03.xyz  joint_noise_0.03.xyz  part_noise_0.03.xyz
data/scan/: tool.xyz
examples/: CMakeLists.txt  bilateral.cpp  main.cpp  surface_recon.cpp
scripts/: armadillo_comparison_with_bilateral.sh  cad_models_stress_test.sh  cad_post_processing_demo.sh  compute_normals.py  script_for_apss.xml  script_for_rimls.xml
src/: CMakeLists.txt  IO.cpp  IO.h  dbscan.cpp  dbscan.h  denoising.cpp  denoising.h  kmeans.cpp  kmeans.hpp  neighbors.cpp  neighbors.h  pcg.cc  pcg.h  postprocessing.cpp  postprocessing.h  utils.cpp  utils.h
